--- a/eim_frontend/src/components/main/pages/my/My.css
+++ b/eim_frontend/src/components/main/pages/my/My.css
@@ -1,3 +1,24 @@
 #my{
     display: none;
 }
+
+.My_name{
+    font-size: xx-large;
+    padding: 10px 10px 5px 10px;
+}
+
+.My_Eid{
+    padding: 0 0 0 10px;
+    color: rgba(0,0,0,0.6);
+    font-size: 60%;
+}
+.My_detail{
+    padding: 2px 10px 10px 10px;
+    color: rgba(0,0,0,0.6);
+}
+
+.My_detail_title{
+    margin: 5px 10px 2px 10px;
+    padding: 0 0 5px 0;
+    border-bottom: 1px solid #005CAF;
+}
