--- a/eim_frontend/src/components/main/pages/contacts/FriendReq/friendReq.css
+++ b/eim_frontend/src/components/main/pages/contacts/FriendReq/friendReq.css
@@ -6,3 +6,40 @@
     display: none;
     background-color: white;
 }
+
+.singleAddReqElement{
+    width: 90%;
+    padding: 5px 10px 5px 10px;
+    border: 1px solid rgba(0,0,0,0.1);
+    box-shadow: 2px 2px 7px rgba(0,0,0,0.2);
+    margin: 5px 10px 5px 10px;
+}
+
+.senderName{
+    color: #1d39c4;
+    font-size: large;
+}
+
+.okButton{
+    color: #1d39c4;
+    margin: 5px 20% 5px 20%;
+    width: 60%;
+    text-align: center;
+    background-color: rgba(129,199,212,0.1);
+    padding: 5px 0 5px 0 ;
+    border-radius: 7px;
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+    border: 1px solid rgba(0,0,0,0.1);
+}
+
+.beizhu{
+    border: none;
+    border-bottom: 1px solid rgba(0,0,0,0.3);
+    margin: 0 0 10px 0;
+}
+
+.senderText{
+    padding: 0 0 5px 0;
+    border-bottom: 1px solid #1d39c4;
+    margin: 0 0 10px 0;
+}
