--- a/eim_frontend/src/components/main/messageView/messageView.css
+++ b/eim_frontend/src/components/main/messageView/messageView.css
@@ -17,13 +17,20 @@
 
 .closeMV{
     position: absolute;
+    padding: 1.5vh 0 0 1.5vh;
+}
+
+.detailNow{
+    position: absolute;
+    padding: 1.5vh 1.5vh 0 0;
+    right: 0;
 }
 
 .MessageObjectName{
     text-align: center;
     width: 100%;
-    height: 5vh;
-    line-height: 5vh;
+    height: 7vh;
+    line-height: 7vh;
     color: #005CAF;
     font-size: large;
 }
@@ -32,7 +39,7 @@
     position: fixed;
     top: 0;
     background-color: aliceblue;
-    height: 5vh;
+    height: 7vh;
     width: 100%;
 }
 
