--- a/eim_frontend/src/components/main/pages/contacts/FriendReq/friendReq.css
+++ b/eim_frontend/src/components/main/pages/contacts/FriendReq/friendReq.css
@@ -14,6 +14,7 @@
     border: 1px solid rgba(0,0,0,0.1);
     box-shadow: 2px 2px 7px rgba(0,0,0,0.2);
     margin: 5px 10px 5px 10px;
+    border-radius: 7px;
 }
 
 .senderName{
@@ -41,6 +42,7 @@
 
 .senderText{
     padding: 0 0 5px 0;
+    color: rgba(0,0,0,0.6);
     border-bottom: 1px solid #1d39c4;
     margin: 0 0 10px 0;
 }
