--- a/eim_frontend/src/components/register/register.css
+++ b/eim_frontend/src/components/register/register.css
@@ -14,7 +14,8 @@
     height: 30px;
     padding: 0 20px 0 20px;
     margin: 5px 0 0 0;
-    border-radius: 10px;
+    border-radius: 2px;
+    border: 1px solid rgba(0,0,0,0.2);
 }
 
 .registerTitle{
